{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 91,
  "lineage": "2e0d0494-9ff9-ef4c-a456-6afed486f5f8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:internet-gateway/igw-04fe0cfc525060b93",
            "id": "igw-04fe0cfc525060b93",
            "owner_id": "805657748946",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04fe0cfc525060b93",
            "id": "r-rtb-0d885d13ed122d2c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d885d13ed122d2c3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:route-table/rtb-01b695ee986e87a2a",
            "id": "rtb-01b695ee986e87a2a",
            "owner_id": "805657748946",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:route-table/rtb-07a9a51db5f75a614",
            "id": "rtb-07a9a51db5f75a614",
            "owner_id": "805657748946",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:route-table/rtb-09c1b44751e5b9f04",
            "id": "rtb-09c1b44751e5b9f04",
            "owner_id": "805657748946",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:route-table/rtb-0d885d13ed122d2c3",
            "id": "rtb-0d885d13ed122d2c3",
            "owner_id": "805657748946",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4a241f3df0416e7",
            "route_table_id": "rtb-01b695ee986e87a2a",
            "subnet_id": "subnet-0e7c30d4894514801"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0134b7b25a6e3bf0b",
            "route_table_id": "rtb-07a9a51db5f75a614",
            "subnet_id": "subnet-0c1b3f1c30d8a268c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07575d8ab0c7f728b",
            "route_table_id": "rtb-09c1b44751e5b9f04",
            "subnet_id": "subnet-0c01a539c2583320e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc1a6c48e63b57c0",
            "route_table_id": "rtb-0d885d13ed122d2c3",
            "subnet_id": "subnet-02932110e15d9cc56"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd64f4486d84966",
            "route_table_id": "rtb-0d885d13ed122d2c3",
            "subnet_id": "subnet-0741821e40f2c590b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078630e3448db7881",
            "route_table_id": "rtb-0d885d13ed122d2c3",
            "subnet_id": "subnet-0bf417e1d461ed2fc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:subnet/subnet-0e7c30d4894514801",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7c30d4894514801",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805657748946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:subnet/subnet-0c1b3f1c30d8a268c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1b3f1c30d8a268c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805657748946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:subnet/subnet-0c01a539c2583320e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c01a539c2583320e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805657748946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:subnet/subnet-02932110e15d9cc56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02932110e15d9cc56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805657748946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:subnet/subnet-0741821e40f2c590b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0741821e40f2c590b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805657748946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:subnet/subnet-0bf417e1d461ed2fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf417e1d461ed2fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805657748946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-0d04e1ff65b57ea7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:805657748946:vpc/vpc-0d04e1ff65b57ea7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033e5f1f8fbdd68f1",
            "default_route_table_id": "rtb-02a2dc31ba94da663",
            "default_security_group_id": "sg-00feafdd3855ea1ef",
            "dhcp_options_id": "dopt-05b2e3aede3c9f2a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d04e1ff65b57ea7d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a2dc31ba94da663",
            "owner_id": "805657748946",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}